--- a/main.css
+++ b/main.css
@@ -70,3 +70,36 @@ body{
     top: -45px;
     z-index: 14;
 }
+
+.nav{
+    background-color: #ccccccc1;
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+}
+
+.nav ul{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.nav ul li{
+    list-style: none;
+}
+
+.nav ul li a{
+    text-decoration: none;
+    color: #333;
+    display: inline-block;
+    background-color: #fff;
+    margin: 15px;
+    padding: 10px 20px;
+    border-radius: 25px 0 0 0;
+    transition: 0.5s;
+}
+
+.nav ul li a:hover{
+    color: #bf2c2c;
+    border-radius: 0 0 25px 0;
+}
